@@ -1,3 +1,9 @@
+Tue May 12 12:56:40 GMT 2015  Olly Betts <olly@survex.com>
+
+	* docs/overview.rst,omindex.cc: Add support for %f in command passed
+	  to --filter to allow specifying commands where the input file is
+	  not the final argument.  Fixed #570, reported by "catkin".
+
 Tue May 12 11:17:20 GMT 2015  Olly Betts <olly@survex.com>
 
 	* diritor.h,omindex.cc,values.h: Add -track-ctime option to allow
